# reflask

./: .gitattributes  .gitignore  .gitignore.bak_20250906_175030  .pre-commit-config.yaml  README.md  WARP.md  app.py  batch_predict.py  create_model.py  dbAccessFunctions.py  main.py  pkgs.txt  pyproject.toml  reflask_waitress.bat  requirements.txt  run_app.bat  run_batch.bat  setup.py
mlruns/0/: meta.yaml
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/: meta.yaml
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/artifacts/: estimator.html
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/inputs/9426e5ae8bba3371254963e4fe2e07eb/: meta.yaml
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/inputs/e7027656548ddaee7b16de67350b1eef/: meta.yaml
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/metrics/: training_accuracy_score  training_f1_score  training_precision_score  training_score
mlruns/0/918e44fba8814e0ca0e48e7354bb417d/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
night_predict/: batch_results_20241227.json  batch_results_20241230.json
scripts/: uv-auto-python.ps1
tests/: QUICK_REFERENCE.md  README.md  TEST_SUMMARY.md  __init__.py  test_werkzeug_security.py
