[project]
name = "reflask"
version = "0.2.0"
description = "AI-based solution w/ deployment and scheduled auto-batching for binary visual classification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "mlflow>=3.0.0",
    "starlette>=0.49.1",
    "fonttools>4.60.2",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.5",
    "pyasn>=0.6.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
